--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@font-face { font-family: kurdishfont; src: url('rudawbold.ttf'); }
+@font-face { font-family: kurdishfont; src: url('/rudawbold.ttf'); }
 
 /*HEADER*/
 .head{
